# YoutubeDownloaderV2

./: app.py  cache_manager.py  downloader.py  models.py  pyproject.toml
attached_assets/: README.md
static/: robots.txt  sitemap.xml
static/css/: custom.css  style.css
static/js/: script.js
templates/: admin.html  disclaimer.html  donate.html  error.html  faq.html  index.html  layout.html  privacy.html
